# Synnia

./: .gitignore  AGENTS.md  GEMINI.md  README.md  README.zh.md  Synnia.md  eslint.config.mjs  index.html  node-type-extensions.md  note.md  package-lock.json  package.json  pnpm-lock.yaml  strudel-flow-project.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: test.yml
.specify/memory/: constitution.md
doc/: engine-port-refactoring.md
docs/: Problem-Solving-Methodology.md  TEP_Recipe_Architecture_2024-12-26.md  architecture_diagrams.md  complexity_diagrams.md  form-centric-migration.md
notes/: SOULMATE_PROTOCOL.md  SOULMATE_PROTOCOL_CN.md  agent_protocol_philosophy.md  architecture_audit.md  architecture_composable_nodes_and_engine.md  product_philosophy.md  refactor_architecture_v2.md  workflow-refactoring-guide.md
notes/doc/: 技术规格.md  操作流.md
notes/learn/: asset.json  asset.ts  hook.tsx  project_snapshot.json  system_registry.json  universal_asset_registry.json
prompt/: frontEnd.md
public/assets/: Brand_Identity_Guidelines.md
scripts/: gen-node-docs.ts
src/: App.tsx  index copy.css  index.css  main.tsx
src-tauri/: Cargo.toml  fix-bindings.sh  tauri.conf.json
src-tauri/bindings/: AgentDefinition.ts  ArrayAssetConfig.ts  ArrayValueMeta.ts  Asset.ts  AssetData.ts  AssetMeta.ts  AssetMetadata.ts  AssetNode.ts  AssetNodeWithData.ts  AssetSysMetadata.ts  AssetType.ts  AssetVersion.ts  Edge.ts  Graph.ts  ImageAssetConfig.ts  ImageAssetMetadata.ts  ImageValueMeta.ts  NodeStatus.ts  Project.ts  ProjectMeta.ts  Provenance.ts  ProvenanceSource.ts  RecordAssetConfig.ts  RecordValueMeta.ts  SynniaEdge.ts  SynniaNode.ts  SynniaNodeData.ts  SynniaProject.ts  TextAssetConfig.ts  TextAssetMetadata.ts  TextValueMeta.ts  ValueType.ts  Viewport.ts  index.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  db.rs  error.rs  lib.rs  models.rs  state.rs
src-tauri/src/commands/: agent.rs  asset.rs  graph.rs  history.rs  http_proxy.rs  mod.rs  project.rs
src-tauri/src/services/: agent_service.rs  database.rs  file_server.rs  hash.rs  history.rs  io.rs  io_sqlite.rs  metadata.rs  mod.rs
(+453 files in other folders)
