[package]
name = "synnia"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "synnia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] } 
ts-rs = "10.0"
tauri = { version = "2.2.4", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.2.0"
actix-web = "4.4"
actix-files = "0.6.5"
actix-cors = "0.6.5"

# SQLite + CAS + Metadata extraction
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
kamadak-exif = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

# ts-rs global config: export all types to bindings/ directory
[package.metadata.ts-rs]
export_to = "bindings/"
